# todoapp-fastapi

./: pyproject.toml
todoapp_fastapi/: app.py
